# pgmc

./: .gitignore  README.md  build.sh  demo.ipynb  mnist1d.pkl  publish.sh  pyproject.toml  test.py
demo/: advanced_demo.ipynb  basic_demo.ipynb  demo.ipynb
src/: embeddings.py
src/pgmc/: __init__.py  embeddings.py  kpgmc.py  pgmc.py
