[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgmc"
version = "0.0.2"
authors = [
  { name="Mathieu Roget", email="mathieu.roget@lis-lab.fr" },
]
description = "A package implementing the PGMC algorithm for classification."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mroget/pgmc"
"Bug Tracker" = "https://github.com/mroget/pgmc/issues"