[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgmc"
version = "0.0.6"
authors = [
  { name="Mathieu Roget", email="mathieu.roget@lis-lab.fr" },
]
description = "A package implementing the PGMC and KPGMC algorithms for classification."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.23.5", "pandas>=1.5.1", "matplotlib>=3.5.1", "scipy>=1.10.1", "tqdm>=4.64.1", "scikit-learn>=0.23.2", "torch>=2.0.1", "numba>=0.60.0"]

[project.urls]
"Homepage" = "https://github.com/mroget/pgmc"
"Bug Tracker" = "https://github.com/mroget/pgmc/issues"